--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -200,7 +200,8 @@ html
       button.toctree-expand
         // color: $menu-link-active
 
-.wy-side-nav-search
+.wy-side-nav-search,
+#flyout-search-form
   display: block
   width: $nav-desktop-width
   padding: $gutter * 1.3 $gutter * 2 $gutter / 2
